@@ -803,17 +803,29 @@ void Analyzer::Event(EventHandlerPtr f, Val* v1, Val* v2)
 
 void Analyzer::ConnectionEvent(EventHandlerPtr f, val_list* vl)
 	{
-	conn->ConnectionEvent(f, this, vl);
+	auto args = zeek::val_list_to_args(vl);
+
+	if ( f )
+		conn->EnqueueEvent(f, this, std::move(args));
 	}
 
 void Analyzer::ConnectionEvent(EventHandlerPtr f, val_list vl)
 	{
-	conn->ConnectionEvent(f, this, std::move(vl));
+	auto args = zeek::val_list_to_args(&vl);
+
+	if ( f )
+		conn->EnqueueEvent(f, this, std::move(args));
 	}
 
 void Analyzer::ConnectionEventFast(EventHandlerPtr f, val_list vl)
 	{
-	conn->ConnectionEventFast(f, this, std::move(vl));
+	auto args = zeek::val_list_to_args(&vl);
+	conn->EnqueueEvent(f, this, std::move(args));
+	}
+
+void Analyzer::EnqueueConnEvent(EventHandlerPtr f, zeek::Args args)
+	{
+	conn->EnqueueEvent(f, this, std::move(args));
 	}
 
 void Analyzer::Weird(const char* name, const char* addl)
